[gd_scene load_steps=7 format=3 uid="uid://ch4k1a78wknv8"]

[ext_resource type="Script" path="res://src/UI/beginning.gd" id="1_6mcqy"]
[ext_resource type="PackedScene" uid="uid://cxg4t871uddd" path="res://src/UI/dialogue_control.tscn" id="1_74ini"]
[ext_resource type="Theme" uid="uid://csi604a0328au" path="res://src/theme.tres" id="1_irhgp"]

[sub_resource type="Animation" id="Animation_bmg7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b1aw6"]
resource_name = "flashing"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 2.46229, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.0784314, 0.0156863, 0.0470588, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2rp0q"]
_data = {
"RESET": SubResource("Animation_bmg7n"),
"flashing": SubResource("Animation_b1aw6")
}

[node name="Beginning" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_irhgp")
script = ExtResource("1_6mcqy")

[node name="DialogueControl" parent="." instance=ExtResource("1_74ini")]
custom_minimum_size = Vector2(429, 818)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.5
offset_top = -409.0
offset_right = 214.5
offset_bottom = 409.0
dialogue = ""

[node name="btn_forward" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_skip" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 15.0
offset_right = -25.0
offset_bottom = 50.0
grow_horizontal = 0
focus_mode = 0
text = "skip"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0784314, 0.0156863, 0.0470588, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2rp0q")
}

[connection signal="reach_the_end" from="DialogueControl" to="." method="_on_dialogue_control_reach_the_end"]
[connection signal="pressed" from="btn_forward" to="." method="_on_btn_forward_pressed"]
[connection signal="pressed" from="btn_skip" to="." method="_on_btn_skip_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
